# LuxDown

./: .gitattributes  LuxDown.icns  README.md  installer.wxs  pyproject.toml
.github/workflows/: linux.yml  macos.yml  main.yml
src/: LuxDown.icns  __init__.py  de.ts  en.ts  es.ts  fr.ts  main.py  zh_CN.ts
src/core/: __init__.py  download_task.py  downloader.py  exceptions.py  parser.py  ydl_options.py
src/information/: __init__.py  download_history.py  settings_information.py
src/signal/: __init__.py  my_logger.py  signal_emitter.py
src/ui/: __init__.py  download_task_widget.py  list_widget.py  main_interface.py  menu_bar.py  parser_interface.py  settings_interface.py  zh_CN.ts
src/utils/: __init__.py  centered_ui.py  check_update.py  get_config_dir.py  locale.py  set_window_size.py  text_parser.py  text_serialization.py  validate_url.py
src/widegs/: __init__.py
src/widgets/: __init__.py  message_box.py
tests/: test_download_task.py  test_text_parser.py  test_utils.py  test_ydl_options.py
