[project]
name = "LuxDown"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "astroid>=4.1.2",
    "idna>=3.15",
    "nuitka>=4.1",
    "packaging>=26.2",
    "pip-audit>=2.10.0",
    "pyside6>=6.11.1",
    "pyside6-addons>=6.11.1",
    "pyside6-essentials>=6.11.1",
    "pytest>=9.0.3",
    "qt-material>=2.17",
    "requests>=2.34.0",
    "shiboken6>=6.11.1",
    "yt-dlp>=2026.3.17",
    "yt-dlp-ejs>=0.8.0",
]
